--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,6 @@
 	--rem-value: clamp(12px, 1.8vw, 18px);
 	--inner-spacing: 1.5rem;
 	--outer-spacing: 3.5rem;
-	--page-width: min(100%, 700px);
 
 	--chrome-color: oklch(63.98% 0.2175 24.16 / 0.9);
 	--firefox-color: oklch(79.27% 0.171 70.67 / 0.9);
@@ -28,6 +27,8 @@ html {
 	font-family: "Montserrat", sans-serif;
 	font-size: var(--rem-value);
 	color: var(--text-color);
+
+	overflow: hidden;
 }
 
 body {
@@ -40,39 +41,4 @@ body {
 
 	background: var(--background);
 	background-repeat: no-repeat;
-}
-
-.intro {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-
-	width: 100%;
-	height: 100vh;
-
-	padding: var(--outer-spacing);
-
-	header {
-		display: flex;
-		flex-flow: column;
-		align-items: center;
-		justify-content: center;
-		gap: 20px;
-	}
-
-	h1 {
-		overflow: hidden;
-		border-right: 0.15em solid orange;
-		white-space: nowrap;
-		padding-right: 10px;
-		margin: 0 auto;
-
-		font-size: 4rem;
-	}
-
-	p {
-		font-size: 1.2rem;
-
-		opacity: 0;
-	}
 }
